--- a/src/index.css
+++ b/src/index.css
@@ -19,4 +19,14 @@
   transform-style: preserve-3d;
 }
 
-  
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.full-landing-image {
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+}
